force-app/main/default/objects/Item_Site__c/Item_Site__c.object-meta.xml
<CustomObject>
    <label>Item Site</label>
    <nameField>
        <label>Item Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>