force-app/main/default/objects/Item_Site__c/fields/Bypass_Spares_Required_Calc__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Spares_Required_Calc__c</fullName>
    <description>this is for Depot</description>
    <label>Bypass Spares Required Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>