force-app/main/default/objects/Item_Site__c/fields/In_Transit_To_Depot__c.field-meta.xml
<CustomField>
    <fullName>In_Transit_To_Depot__c</fullName>
    <label>In Transit To Depot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>