force-app/main/default/objects/Item_Site__c/fields/Item1__c.field-meta.xml
<CustomField>
    <fullName>Item1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item1</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Item Sites1</relationshipLabel>
    <relationshipName>Item_Sites1</relationshipName>
    <type>Lookup</type>
</CustomField>