force-app/main/default/objects/Item_Site__c/fields/Item_Site__c.field-meta.xml
<CustomField>
    <fullName>Item_Site__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id, Name &amp; &quot;_&quot; &amp; Site__r.Name &amp; &quot;_&quot; &amp; Item__r.Name, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Site</label>
    <type>Text</type>
</CustomField>