force-app/main/default/objects/Item_Site__c/fields/Item_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Site_Name__c</fullName>
    <formula>Name &amp; &quot;_&quot; &amp; Site__r.Name &amp; &quot;_&quot; &amp; Item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Site Name</label>
    <type>Text</type>
</CustomField>