force-app/main/default/objects/Item_Site__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Item Sites</relationshipLabel>
    <relationshipName>Item_Sites</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>