force-app/main/default/objects/Item_Site__c/fields/site_record_type__c.field-meta.xml
<CustomField>
    <fullName>site_record_type__c</fullName>
    <formula>Site__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>site record type</label>
    <type>Text</type>
</CustomField>