force-app/main/default/objects/Item_Site__c/fields/Spare_Total__c.field-meta.xml
<CustomField>
    <fullName>Spare_Total__c</fullName>
    <description>Good Spares on hand at the depot</description>
    <label>On Hand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>