force-app/main/default/objects/Item_Site__c/fields/Spares__c.field-meta.xml
<CustomField>
    <fullName>Spares__c</fullName>
    <description>Good Spares on hand at Warehouse designated sites.</description>
    <label>Spares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>