force-app/main/default/objects/Item_Site__c/fields/Spares_AWR__c.field-meta.xml
<CustomField>
    <fullName>Spares_AWR__c</fullName>
    <description>Bad Spares on hand at Warehouse designated sites.</description>
    <label>Spares AWR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>