force-app/main/default/objects/Item_Site__c/fields/Spares_Required__c.field-meta.xml
<CustomField>
    <fullName>Spares_Required__c</fullName>
    <label>Spares Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>