force-app/main/default/objects/Item_Site__c/fields/Stock_AWR__c.field-meta.xml
<CustomField>
    <fullName>Stock_AWR__c</fullName>
    <label>Stock AWR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>