force-app/main/default/objects/Item_Site__c/fields/Total_Deployed__c.field-meta.xml
<CustomField>
    <fullName>Total_Deployed__c</fullName>
    <description>Sum of all deployed quantities for the part at the depot.</description>
    <label>Total Deployed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>